added the esri layer on the react leaflet with proper popup content

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@
     <!-- Mandatory for react-leaflet-draw -->
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.1/leaflet.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css">
+    <!-- Include Esri Leaflet JavaScript (CSS is not required) -->
+    <script src="https://unpkg.com/esri-leaflet@2.4.1/dist/esri-leaflet.js"></script>
     <!-- Custom Stylesheets ends -->
     <title>Leaflet Demo</title>
   </head>
